fix: 💄 wrong size for the gallery in mobile view

--- a/src/components/Carousel/index.scss
+++ b/src/components/Carousel/index.scss
@@ -6,6 +6,7 @@
 
   .carousel-picture {
     width: 100%;
+    height: 255px;
     object-fit: cover;
     border-radius: 10px;
 
